# project-comet

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  commutator_common.py  environment.yml  pyproject.toml  pytest.ini  roadmap_checklist.md
.github/workflows/: ci.yaml  ci.yml  smoke.yml
config/: paths.yaml  prereg.yaml
docs/issues/: phase1-data-validation.md  phase1-io-metadata.md  phase2-masking-binning.md  phase3-spectra-deconvolution.md  phase4-null-tests.md  phase5-simulations-theory.md  phase6-real-science.md
docs/tex/: p2_commutator_program.tex  pbc_dual_construction.tex  pbc_inference.tex
scripts/: __init__.py  build_context_template.py  check_data.py  commutator_common.py  compute_commutator.py  compute_cross_spectrum.py  derive_theory_from_maps.py  fetch_planck_pr4.py  make_mask.py  pipeline_check.sh  pipeline_quick.sh  run_null_sims.py  run_null_variants.py  run_order_A_to_B.py  run_order_B_to_A.py  summarize_results.py  theory.py
src/: _commutator_common_impl.py  common.py  commutator.py  commutator_common.py  context_template.py  isw_filters.py  masking.py
src/comet/: __init__.py  cli.py  commutator.py  config.py  context.py  data.py  demo.py  io_maps.py  masking.py  namaster_utils.py  nulls.py  run.py  runners.py  simulations.py  summarize.py  theory.py
tests/: conftest.py  test_cli_smoke.py  test_commutator.py  test_compute_cross_spectrum.py  test_derive_theory_from_maps.py  test_env_smoke.py  test_healpix_unit.py  test_infer_bin_lmax.py  test_io_local.py  test_io_maps_metadata.py  test_masking_and_binning.py  test_namaster_windows.py  test_namaster_workspaces.py  test_nm_bins_from_params.py  test_null_variants.py  test_quick_outputs.py  test_run_pipeline_quick.py  test_simulation_bandlimits.py  test_simulation_covariance.py  test_summarize_results.py  test_theory_loader.py
